<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.LoginSetActivity">

    <include layout="@layout/layout_gray_head" />

    <EditText
        android:id="@+id/et_login_set"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:hint="@string/login_set_ip"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:text="@string/default_url"
        android:textColor="@color/text_main_color"
        android:textColorHint="@color/text_tip_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="@dimen/text_size_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/text_tip_color" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />
</LinearLayout>