<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <include layout="@layout/layout_blue_head" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/icon_padding"
                android:layout_marginRight="@dimen/icon_padding">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="学生姓名"
                    android:textColor="@color/text_second_color"
                    android:textSize="@dimen/text_size_normal" />

                <EditText
                    android:id="@+id/et_stu_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv1"
                    android:background="@null"
                    android:hint="@string/enter_stu_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/text_main_color"
                    android:textColorHint="@color/text_tip_color"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text_size_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_tip_color" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/icon_padding"
                android:layout_marginRight="@dimen/icon_padding">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="学生性别"
                    android:textColor="@color/text_second_color"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_stu_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv2"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/select_stu_sex"
                    android:textColor="@color/text_main_color"
                    android:textSize="@dimen/text_size_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_tip_color" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/icon_padding"
                android:layout_marginRight="@dimen/icon_padding">

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="联系电话"
                    android:textColor="@color/text_second_color"
                    android:textSize="@dimen/text_size_normal" />

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv3"
                    android:background="@null"
                    android:hint="@string/enter_phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/text_main_color"
                    android:textColorHint="@color/text_tip_color"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text_size_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_tip_color" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/icon_padding"
                android:layout_marginRight="@dimen/icon_padding">

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="所属班级"
                    android:textColor="@color/text_second_color"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_stu_class"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv4"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/select_stu_class"
                    android:textColor="@color/text_main_color"
                    android:textSize="@dimen/text_size_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_tip_color" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/icon_padding"
                android:layout_marginRight="@dimen/icon_padding">

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="出生日期"
                    android:textColor="@color/text_second_color"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_stu_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv5"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/select_stu_birthday"
                    android:textColor="@color/text_main_color"
                    android:textSize="@dimen/text_size_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_tip_color" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/icon_padding"
                android:layout_marginRight="@dimen/icon_padding">

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="家庭地址"
                    android:textColor="@color/text_second_color"
                    android:textSize="@dimen/text_size_normal" />

                <EditText
                    android:id="@+id/et_stu_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv6"
                    android:background="@null"
                    android:hint="@string/enter_stu_address"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/text_main_color"
                    android:textColorHint="@color/text_tip_color"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text_size_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_tip_color" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="@dimen/icon_padding"
                android:layout_marginRight="@dimen/icon_padding">

                <TextView
                    android:id="@+id/tv7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="上传头像"
                    android:textColor="@color/text_second_color"
                    android:textSize="@dimen/text_size_normal" />

                <ImageView
                    android:id="@+id/iv_add_pic"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/tv7"
                    android:src="@mipmap/icon_add_pic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_tip_color" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="保存"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
